--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
                 <input type="date" id="birthday-input" required>
                 <button id="generate-btn">生成报告</button>
             </div>
-            <div id="loader" class="loader" style="display: none;"></div>
+            <div id="loader" class="loading-container" style="display: none;">
+                <div class="loader"></div>
+                <div class="loading-message">AI正在为您生成专属报告<span class="progress-dots"></span></div>
+                <div class="loading-submessage">请耐心等待，通常需要1-3分钟</div>
+            </div>
             <div id="error-message" class="error-message" style="display: none;"></div>
             <div id="report-container" class="report-container">
                  <!-- Core data and chart will be inserted here -->
@@ -35,7 +39,8 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
