update mobile user save img report

--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,14 @@
             <div class="footer-buttons">
                 <button id="generate-again-btn" style="display: none;">生成另一份报告</button>
                 <button id="save-report-btn" style="display: none;">保存报告</button>
+                <button id="save-image-btn" style="display: none;">保存为图片</button>
             </div>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
