--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         </header>
         <main>
             <div class="input-section">
-                <input type="date" id="birthday-input" required>
+                <input type="date" id="birthday-input" required min="1934-01-01" max="2024-12-31">
                 <button id="generate-btn">生成报告</button>
             </div>
             <div id="loader" style="display: none;">
