--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>儿童命理与发展指南</h1>
+            <h1>数字命理与发展指南</h1>
             <p>输入您孩子的出生日期，探索他/她的内在天赋与潜能。</p>
         </header>
         <main>
