update save pdf function

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         <footer>
             <div class="footer-buttons">
                 <button id="generate-again-btn" style="display: none;">生成另一份报告</button>
+                <button id="save-pdf-btn" style="display: none;">保存为PDF</button>
                 <button id="save-image-btn" style="display: none;">保存为图片</button>
             </div>
         </footer>
